Fix the issue when content was centered on mobile devices

--- a/Themes/default/css/light_portal/portal.less
+++ b/Themes/default/css/light_portal/portal.less
@@ -303,6 +303,10 @@
 			dt.pf_content,
 			dd.pf_content {
 				width: 100%;
+
+				@media (max-width: 600px) {
+					text-align: justify;
+				}
 			}
 		}
 
